[package]
name = "sub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.12.0", default-features = false, features = [
	"attributes",
] }
clap = "2.33.3"
env_logger = "0.9.0"
futures = "0.3.12"
git-version = "0.3.4"
json5 = "0.4.1"
log = "0.4"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "api-changes"}